--- a/Ameriacan-Football.html
+++ b/Ameriacan-Football.html
@@ -3,61 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>American-Football</title>
+    <title>American Football</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>American Football</h1>
-        <a href="index.html" class="link">back to the Homepage</a>
+        <table>
+            <tr>
+                <td>
+                    <div class="logo-container">
+                        <img src="Grid Iron.png" alt="Logo" class="logo">
+                    </div>
+                </td>
+                <td>
+                    <h1>American Football</h1>
+                    <a href="index.html" class="link">Back to the main page</a>
+                </td>
+            </tr>
+        </table>
     </header>
-        <h2>American Football</h2>
-        <p>The path to becoming an NFL professional requires talent, hard work, and the right mindset. <br>
-            First, players need to master fundamental football skills such as passing, tackling, and blocking<br>
-            while improving physical fitness through endurance, strength, and speed training.<br>
-            Mentally strong players who can handle pressure and continuously strive to improve have the best chances of success.<br>
-         Dann helfen wir dir bei deinen nächsten Schritten. Sende dein Tape von deinen Spielen und deinen besten Szenen.</p>
-         <br>
-        <h2>Football </h2>
-        <p><strong>First step to The USA:</strong>
-        <br>    
-        Joining a college team is a crucial step, as many NFL players are scouted through college football. <br>
-        The NFL Draft is the moment when players are selected, but securing a permanent spot comes only after 
-        intense training and competition within the professional team.<br>
-        The journey is tough, but with dedication and constant improvement, the dream of an NFL career can become a reality. </p>
-        <br>    
-        <ul>
-            <li><strong>What We Offer:</strong></li>
-                    <li>Assistance in creating a professional highlight tape.</li> 
-                    <li>Placement in schools and football programs.</li> 
-                    <li>Connections to scouts and football leagues.</li> 
-                    <li>Analysis of your skills with optimization suggestions.</li> 
-                    <li>Preparation for athletic and mental challenges.</li> 
-         </ul>
-            <br>
-        <ul>
-            <li><strong>Your Benefits:</strong></li>
-           <li> Access to the best leagues in the world.</li> 
-            <li>Career opportunities in the U.S. or internationally.</li> 
-            <li>Personalized support for long-term goals.</li> 
-            <li>Strategic career planning. </li>
-            <li>a network within the football world.</li>
-        </ul>
-            <br>
-        <ul>
-            <li><strong>How It Works:</strong></li>
-                    <li>You send us your highlight tape.</li>
-                    <li>We evaluate your performance and provide feedback.</li>  
-                    <li> identify suitable options for you.</li>    
-                    <li>Connections to high schools, colleges, and leagues are established.</li>   
-                    <li>You receive full support in planning your career. Sie senden uns Ihr Tape.</li>
-        </ul>
+
+    <h2>The Path</h2>
+    <p>The path to becoming an NFL pro requires talent, hard work, and the right mindset. 
+        <br>First, you need to master basic football skills such as passing, 
+        <br>tackling, and blocking, while improving physical fitness through endurance, strength, and speed. 
+        <br>Mental toughness is key – players who can handle pressure and continuously work on themselves have the best chances. 
         <br>
+        <br>A crucial step is joining a college team, as many NFL players are discovered through college football.  
+        <br>The NFL Draft is the moment when players are selected, 
+        <br>but it’s only after intensive training and competition with the pro team that the final spot is secured. 
+        <br>The road is tough, but with dedication and continuous improvement, the dream of an NFL career can become a reality.</p>
+    <br>
+    <figure> 
+        <img src="Football 1.jpg" alt="">
+        <figcaption>Figure 1</figcaption> 
+    </figure>
+    <br>
+
+    <h2>Team Chemistry</h2>
+    <br>
+    <p>At Grid Iron Sports, we help football players unlock their full potential<br>
+        <br>and present themselves optimally to scouts and coaches. First, we analyze 
+        <br>the strengths and weaknesses of the athlete and develop an individual training program
+        <br>that focuses on speed, strength, and technique. 
         <br>
-        <br>
-        <footer>
-            <p>&copy; 2025 Grid Iron Sports</p>
-        </footer>
+        <br>With modern video analysis, we highlight their best plays and point out potential improvements.<br> 
+        <br>Additionally, we create professional highlight tapes that emphasize the player's key skills. 
+        <br>We also assist with social media positioning and networking with coaches to increase visibility. 
+        <br>Our goal is to give every player the chance to be successful on and off the field.</p>
+    <br>
+    <figure> 
+        <img src="Football 2.png" alt="">
+        <figcaption>Figure 2</figcaption> 
+    </figure>
+
+    <br>
+    <ul>
+        <li><strong>What we offer:</strong></li>
+        <li>Help with creating a professional highlight tape.</li>
+        <li>Placement assistance for schools and football programs.</li>
+        <li>Contacts with scouts and football leagues.</li>
+        <li>Analysis of your skills and optimization suggestions.</li>
+        <li>Preparation for athletic and mental challenges.</li>
+    </ul>
+    <figure> 
+        <img src="Football Scouts.png" alt="">
+        <figcaption>Figure 3</figcaption> 
+    </figure>
+
+    <br>
+    <ul>
+        <li><strong>Your benefits:</strong></li>
+        <li>Access to the best leagues in the world.</li>
+        <li>Career opportunities in the USA or internationally.</li>
+        <li>Personal support for long-term goals.</li>
+        <li>Strategic career planning.</li>
+        <li>Building a network in the football world.</li>
+    </ul>
+    <figure> 
+        <img src="Football 5.png" alt="">
+        <figcaption>Figure 4</figcaption> 
+    </figure>
+
+    <br>
+    <ul>
+        <li><strong>How it works:</strong></li>
+        <li>You send us your tape.</li>
+        <li>We evaluate your performance and provide feedback.</li>
+        <li>We find suitable options for you.</li>
+        <li>Contacts with high schools, colleges, and leagues will be made.</li>
+        <li>You receive support with your career planning.</li>
+    </ul>
+    <figure> 
+        <img src="Football 6.png" alt="">
+        <figcaption>Figure 5</figcaption> 
+    </figure>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <p>&copy; 2025 Grid Iron Sports</p>
+    </footer>
 </body>
 </html>
