--- a/Fußball.html
+++ b/Fußball.html
@@ -9,53 +9,100 @@
 </head>
 <body>
     <header>
-        <h1>Soccer</h1>
-        <a href="index.html" class="link">back to the Homepage</a>
+        <table>
+            <tr>
+                <td>
+                    <div class="logo-container">
+                        <img src="Grid Iron.png" alt="Logo" class="logo">
+                    </div>
+                </td>
+                <td>
+                    <h1>Football</h1>
+                    <a href="index.html" class="link">Back to the homepage</a>
+                </td>
+            </tr>
+        </table>
     </header>
-        <h2>Soccer</h2>
-        <p>Soccer is more than just technique and fitness; it also requires mental strength.<br>
-         If you dream of becoming a professional football player, whether in Germany or internationally,<br>
-         we are here to help you. Our goal is to assist you in gaining access to youth development centers<br>
-         (YDC) and leagues like the Bundesliga, Premier League, or La Liga. </p>
+    
+    <h2>The Path</h2>
+    <p> The path to becoming a professional in football requires not only technique and fitness but also mental strength. 
+        <br>A player in the 3rd league and a Bundesliga player often differ not in technique, but in fitness and conditioning.
+        <br>Bundesliga players are fitter and more influential on the field due to their better physical condition, supported by targeted strength training and conditioning.
         <br>
-        <p><strong>Our work:</strong><br>
-            Our team analyzes your strengths and provides feedback, so you know exactly what to work on.<br>
-            With our help, you'll become more visible to scouts and clubs.<br>
-            We offer you access to national and international leagues and assist you in carefully planning your career. </p>
-         <br>
-        <ul>
-            <li><strong>What We Offer:</strong></li>
-                    <li> Assistance in creating a professional highlight tape.</li>      
-                    <li> in schools and football programs. </li>
-                    <li> to scouts and football leagues. </li>
-                    <li> of your skills with optimization suggestions.</li> 
-                    <li> for athletic and mental challenges.</li>
-        </ul>
-            <br>
-        <ul>     
-            <li><strong>Your Benefits:</strong></li>
-                    <li>Access to the best leagues in the world.</li>
-                    <li> Career opportunities in the U.S. or internationally. </li>
-                    <li>Personalized support for long-term goals.</li>
-                    <li>Strategic career planning.</li>
-                    <li>Building a network within the football world.</li>
-        </ul>
-            <br>
-        <ul>
-            <li><strong>How It Works:</strong></li>
-                    <li>You send us your highlight tape.</li>
-                    <li>We evaluate your performance and provide feedback.</li>                        
-                    <li>We identify suitable options for you. </li>
-                    <li>Connections to high schools, colleges, and leagues are established.</li> 
-                    <li> You receive full support in planning your career. </li>
-        </ul>
+        <br> In addition to physical fitness, the ability for self-reflection is crucial. Players must identify their weaknesses and continuously work on them. 
+        <br>Joining a football academy helps develop both technical skills and mental strength. 
+        <br>A strong attitude, consistency, and the ability to handle pressure are also necessary to succeed in professional football. 
+        <br>The path to professionalism requires endurance, patience, and continuous development.
+    </p>
+    <br>
+    <figure> 
+        <img src="Paul Wanner.png" alt="Paul Wanner">
+        <figcaption>Figure 1</figcaption> 
+    </figure>
+    <br>
+
+    <h2>Our Opportunities</h2>
+    <p>  Professional football in Germany or internationally. Entry into youth development centers (NLZ). Opportunities in leagues like Bundesliga, Premier League, La Liga. 
+    <br>
+    Discipline and consistency are key to overcoming setbacks and staying on the right path. 
+    <br>Your chances increase if you are noticed in the club structure and possibly discovered by scouts. 
+    <br>
+    <br>Building a network can also be helpful. With consistent good performances, you can rise to higher leagues and become a better player. 
+    <br>Our team analyzes your strengths and gives you feedback, so you know exactly what you need to work on. 
+    <br>With our help, you will become more visible to scouts and clubs. We offer you access to national and international leagues and help you carefully plan your career.
+    </p> 
+    <br>
+    <ul>
+        <li><strong>What we offer:</strong></li>
+        <li>Referral to youth development centers and clubs.</li>
+        <li>Creation of a compelling highlight video.</li>
+        <li>Direct contacts with talent scouts.</li>
+        <li>Support for trial trainings and applications.</li>
+        <li>Analysis and optimization of your strengths.</li>
+    </ul>
+    <figure> 
+        <img src="Eintracht Braunschweig NLZ.png" alt="Youth Development Center">
+        <figcaption>Figure 2</figcaption> 
+    </figure>
+    <ul>     
         <br>
+        <li><strong>Your Benefits:</strong></li>
+        <li>Higher visibility to scouts and clubs.</li>
+        <li>Preparation for professional requirements.</li>
+        <li>Access to national and international leagues.</li>
+        <li>Personalized support for your career planning.</li>
+        <li>Direct contacts with relevant decision-makers.</li>
+    </ul>
+    <br>
+    <figure> 
+        <img src="Fussball Scouts.png" alt="Scouts">
+        <figcaption>Figure 3</figcaption> 
+    </figure>
+    <ul>
         <br>
-        <br>
-        <footer>
-            <p>&copy; 2025 Grid Iron Sports</p>
-        </footer>
+        <li><strong>How does it work?</strong></li>
+        <li>You send us your highlight video.</li>
+        <li>We analyze your performance and give feedback.</li>
+        <li>You receive tailored suggestions.</li>
+        <li>We establish contacts with suitable clubs.</li>
+        <li>You will be prepared for trial trainings.</li>
+    </ul>
+    <figure> 
+        <img src="Mann am PC.png" alt="Youth Development Center">
+        <figcaption>Figure 4</figcaption> 
+    </figure>
+    <br>
+    <br>
+    <br>
+
+    <br>
+    <a href="https://www.laola1.at/de/red/fussball/international/deutschland/bundesliga/news/weisheitszaehne-zwingen-paul-wanner-zu-trainings-pause/ " class="link" >Figure 1 / Paul Wanner / 16.01.25</a>
+    <a href="https://www.eintracht.com/teams/nachwuchs/news/artikel/jahresrueckblick-des-nlz " target="_blank">Figure 2 / Youth Player / 16.01.25</a>
+    <a href="https://thepfsa.co.uk/de/how-to-get-scouted-for-football/ " target="_blank">Figure 3 / Scouts / 16.01.25</a>
+    <a href="https://de.freepik.com/fotos-vektoren-kostenlos/mensch-computer " target="_blank">Figure 4 / Man at PC / 16.01.25</a>
+
+    <footer>
+        <p>&copy; 2025 Grid Iron Sports</p>
+    </footer>
 </body>
 </html>
-
-
