--- a/basketball.html
+++ b/basketball.html
@@ -8,52 +8,103 @@
 </head>
 <body>
     <header>
-        <h1>Basketball</h1>
-        <a href="index.html" class="link">back to the Homepage</a>
+        <table>
+            <tr>
+                <td>
+                    <div class="logo-container">
+                        <img src="Grid Iron.png" alt="Logo" class="logo">
+                    </div>
+                </td>
+                <td>
+                    <h1>Basketball</h1>
+                    <a href="index.html" class="link">Back to the main page</a>
+                </td>
+            </tr>
+        </table>
     </header>
-        <h2>Basketball</h2>
-        <p>We start by creating a professional highlight video that showcases your best plays and skills.<br>
-        This video helps you apply to schools and teams, making you stand out from other applicants.<br>
-        Our team also supports you with the application process and helps <br>
-        you find the best opportunities that match your goals and abilities. </p>
-         <br>
-        <p><strong>Your dream:</strong> <br>
-            Do you dream of playing basketball in the USA?<br>
-             We provide the necessary support to advance your sports career, whether in high school,<br>
-             college, or a league. With our help, you can significantly increase your chances of making <br>
-             it into the NBA or the German Bundesliga. </p>
-            <br>
-        <ul>
-            <li><strong>What We Offer:</strong></li>
-                    <li>Assistance in creating a professional highlight tape.</li> 
-                    <li>Placement in schools and football programs.</li>     
-                    <li>Connections to scouts and football leagues.</li>  
-                    <li>Analysis of your skills with optimization suggestions.</li>
-                    <li>Preparation for athletic and mental challenges.</li>
-        </ul>
+
+    <h2>The Path</h2>
+    <p>Do you dream of playing basketball in the USA? We offer the necessary support to advance your sports career, 
+        whether it's in high school, college, or a league. With our help, you can significantly increase your chances 
+        of breaking into the NBA or the German Bundesliga. 
         <br>
-        <ul>
-                    <li><strong>Your Benefits:</strong></li>
-                    <li>Access to the best leagues in the world.</li> 
-                    <li>Career opportunities in the U.S. or internationally.</li> 
-                    <li>Personalized support for long-term goals. </li>
-                    <li>Strategic career planning. </li>
-                    <li>Building a network within the football world. </li>
-        </ul>
+        <br>Through our direct contacts with scouts and coaches, you will gain access to valuable networks in the basketball world. 
+        <br>These connections can open doors and provide opportunities that would otherwise be difficult to reach. 
+        <br>We analyze your athletic abilities and provide you with detailed feedback so you know what to work on to improve your game. 
         <br>
-        <ul>
-                <li><strong>How It Works: </strong></li>
-                    <li>You send us your highlight tape.</li> 
-                    <li>We evaluate your performance and provide feedback.</li>                         
-                    <li>We identify suitable options for you.</li>                      
-                    <li>Connections to high schools, colleges, and leagues are established.</li>                         
-                    <li>You receive full support in planning your career. </li>
-                </ul>
+        <figure> 
+            <img src="Basketball 1.png" alt="">
+            <figcaption>Figure 1</figcaption> 
+        </figure>
+    </p>
+    <br>
+
+    <h2>Our Opportunities</h2>
+    <p>The path to becoming a basketball pro requires talent, hard work, and the right mindset. 
+        <br>First, it's important to master the basic skills such as ball handling, shooting, and defense. 
+        <br>Additionally, players need to improve their physical fitness through endurance, strength training, and speed. 
+        <br>Mental strength is also crucial – a pro must handle pressure, overcome setbacks, and constantly work on improving.
         <br>
-        <br>
-        <br>
-        <footer>
-            <p>&copy; 2025 Grid Iron Sports</p>
-        </footer>
+        <br>With our help, you will significantly increase your chances of obtaining a sports scholarship in the USA. Such a scholarship not only provides you with an excellent education, 
+        <br>but also improves your athletic skills through intensive training and competition. 
+        <br>Your playing abilities will be enhanced through our targeted training and the individual guidance of sports experts. 
+        <br>These experts will assist you in creating a personalized career plan tailored to your individual goals and strengths.
+    </p>
+    <br>
+    <figure> 
+        <img src="Basketball 4.jpg" alt="">
+        <figcaption>Figure 2</figcaption> 
+    </figure>
+    <br>
+
+    <ul>
+        <li><strong>What we offer:</strong></li>
+        <li>Creation of a professional highlight video.</li>
+        <li>Application assistance for schools and clubs.</li>
+        <li>Direct contacts with scouts and coaches.</li>
+        <li>Analysis and feedback on your athletic abilities.</li>
+        <li>Access to camps and development programs.</li>
+    </ul>
+    <figure> 
+        <img src="Basketball 6.png" alt="">
+        <figcaption>Figure 3</figcaption> 
+    </figure>
+
+    <br>
+
+    <ul>
+        <li><strong>Your benefits:</strong></li>
+        <li>Better chances of obtaining a scholarship in the USA.</li>
+        <li>Improvement of your playing level.</li>
+        <li>Personal coaching from sports experts.</li>
+        <li>Individual career planning.</li>
+        <li>Easy placement into top leagues.</li>
+    </ul>
+    <br>
+    <figure> 
+        <img src="Basketball 7.png" alt="">
+        <figcaption>Figure 4</figcaption> 
+    </figure>
+    <br>
+
+    <ul>
+        <li><strong>How it works:</strong></li>
+        <li>You send us your highlight video.</li>
+        <li>We analyze your potential and provide feedback.</li>
+        <li>You receive suitable options for your application.</li>
+        <li>We establish contacts with teams and academies.</li>
+        <li>We support you on your way to becoming a pro.</li>
+    </ul>
+    <figure> 
+        <img src="Basketball 8.png" alt="">
+        <figcaption>Figure 5</figcaption> 
+    </figure>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <p>&copy; 2025 Grid Iron Sports</p>
+    </footer>
 </body>
 </html>
