--- a/kontakt.html
+++ b/kontakt.html
@@ -8,32 +8,58 @@
 </head>
 <body>
     <header>
-        <h1>About us</h1>
-        <a href="index.html" class="link">Zurück zur Hauptseite</a>
+        <table>
+            <tr>
+                <td>
+                    <div class="logo-container">
+                        <img src="Grid Iron.png" alt="Logo" class="logo">
+                    </div>
+                </td>
+                <td>
+                    <h2>Contact</h2>
+                    <a href="index.html" class="link">Back to the homepage</a>
+                </td>
+            </tr>
+        </table>
     </header>
-    <h2>About us</h2>
-             <p>We are 4 experts in the 3 areas we offer</p>  
-             <P>The following experts are your contact partners for these areas</p>  
-             <br>     
-             <p>Soccer:</p>  
-             <p>Jonas Knebel</p>
-             <p>Oskar Schandera</p> 
-             <br>
-             <p>Football:</p> 
-             <p>Tim Vorwerk</p>                
-             <br>    
-             <p>Basketball:</p>
-             <p>Lennart Rietzschel</p>                
-             <br>    
-             <p>Why are we doing this?</p>
-             <p>We want to take them to the next level and make sure they have a chance on the big “stage” <br>
-                to show that they belong there our experts know what it is like to get the chance and want <br>
-                to give it to others to promote the young talents</p>
-             <br>
-            <p>Telefon: +49 03514029130</p>
-            <p>Email: Grid.iron.sports.original@gmail.com</p>
-            <footer>
-                <p>&copy; 2024 Grid Iron Sports</p>
-            </footer>
+
+    <h1>Contact</h1>
+    <p>Phone: +49 03514029130</p>
+    <p>Email: Grid.iron.sports.original@gmail.com</p>
+    <p>Cämmerswalder Straße 01189 Dresden</p>
+
+    <h1>About Us</h1>
+    <p>We, Tim, Oskar, Lennart, and Jonas, are the founders of a sports recruiting website that connects talented athletes with the best teams and training opportunities worldwide.
+        <br>Each of us brings expertise from a different sport: Jonas and Oskar in football, Lennart in basketball, and Tim in American football. 
+        <br>
+        <br>We help athletes develop their skills, uncover hidden talent, and make the right connections with teams and coaches. 
+        <br>Our platform provides the necessary support to ensure every athlete can reach their full potential and take their career to the next level. 
+        <br>But who are we really?
+    </p>
+
+    <h1>Jonas</h1>
+    <p>Jonas is a football expert with years of experience as a goalkeeper. He has worked in various youth academies and helps athletes improve their technical and tactical skills. Jonas connects promising talents with good teams and training opportunities.</p>
+
+    <h1>Oskar</h1>
+    <p>Oskar, an experienced football player, knows the demands of the game firsthand. 
+        <br>He supports athletes in recognizing and developing their strengths, 
+        <br>and helps them make the right decisions on their path to a football career.</p>
+    
+    <h1>Lennart</h1>
+    <p>Lennart is our basketball expert and an experienced player. 
+        <br>He helps young talents improve their skills and uses his network to connect them with the right coaches and teams. 
+        <br>His passion for the sport motivates athletes to give their best.</p>
+    
+    <h1>Tim</h1>
+    <p>Tim is a football expert, active player, and passionate about the sport. 
+        <br>With his experience in college and professional football, he helps athletes achieve their career goals and develop their strengths, 
+        <br>so they can find the right training opportunities and teams.</p>
+     <br>
+     <br>
+     <br>
+     <br>
+    <footer>
+        <p>&copy; 2025 Grid Iron Sports</p>
+    </footer>
 </body>
 </html>
