--- a/Fußball.html
+++ b/Fußball.html
@@ -102,7 +102,7 @@
     <a href="https://de.freepik.com/fotos-vektoren-kostenlos/mensch-computer " target="_blank">Figure 4 / Man at PC / 16.01.25</a>
 
     <footer>
-        <p>&copy; 2025 Grid Iron Sports</p>
+        <p class="pf">&copy; 2025 Grid Iron Sports</p>
     </footer>
 </body>
 </html>
