--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     <main>
         <section id="home" class="active">
+            <div class="container">
             <table>
                 <tr>
                     <td> 
@@ -41,7 +42,7 @@
                     </td> 
                     <td> 
                         <h2>Welcome to our website!</h2>
-                        <p>Are you ready to take the next step in your career? 
+                        <p class="pcontainer">Are you ready to take the next step in your career? 
                             <br>We offer you the chance to unlock your potential, 
                             <br>with top programs and exclusive training opportunities. 
                             <br>We use our network and expertise to help you achieve your goals 
@@ -51,11 +52,12 @@
                     </td> 
                 </tr> 
             </table>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Grid Iron Sports</p>
+        <p class="pf">&copy; 2025 Grid Iron Sports</p>
     </footer>
 </body>
 </html>
