--- a/termine.html
+++ b/termine.html
@@ -205,7 +205,7 @@
     <br><br><br>
     
     <footer>
-        <p>&copy; 2025 Grid Iron Sports</p>
+        <p class="pf">&copy; 2025 Grid Iron Sports</p>
     </footer>
 </body>
 </html>
