--- a/kontakt.html
+++ b/kontakt.html
@@ -59,7 +59,7 @@
      <br>
      <br>
     <footer>
-        <p>&copy; 2025 Grid Iron Sports</p>
+        <p class="pf">&copy; 2025 Grid Iron Sports</p>
     </footer>
 </body>
 </html>
